# elogger

./: Cargo.toml  LICENSE
.github/workflows/: build.yml  lint.yml
src/: config.rs  data_handler.rs  elog.rs  external_resources.rs  main.rs  summary.rs
