[package]
name = "alpha-g-elogger"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/ALPHA-g-Experiment/elogger"
publish = false

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.18", features = ["derive"] }
csv = "1.3.0"
dialoguer = "0.11.0"
directories = "5.0.1"
indent = "0.1.1"
reqwest = { version = "0.12.7", features = ["blocking"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tabled = "0.16.0"
tempfile = "3.12.0"
toml = "0.8.19"
tungstenite = "0.24.0"
