[package]
name = "alpha-g-elogger"
version = "0.1.2"
edition = "2021"
repository = "https://github.com/ALPHA-g-Experiment/elogger"
publish = false

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.18", features = ["derive"] }
csv = "1.3.0"
dialoguer = "0.11.0"
directories = "5.0.1"
indent = "0.1.1"
indicatif = "0.17.8"
reqwest = { version = "0.12.7", features = ["blocking"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tabled = "0.16.0"
tempfile = "3.12.0"
toml = "0.8.19"
tungstenite = "0.24.0"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.19.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-pc-windows-msvc"]
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Publish jobs to run in CI
pr-run-mode = "plan"
# Whether to install an updater program
install-updater = false
# Whether to consider the binaries in a package for distribution (defaults true)
dist = true
